monitor/dingtalk_webhook/service.yml
---
kind: Service
apiVersion: v1
metadata:
  name: dingtalk
  namespace: kube-system
spec:
  ports:
  - port: 8060
  selector:
    app: dingtalk
