monitor/dingtalk_webhook/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dingtalk
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: dingtalk.vkingcloud.com
    http:
      paths:
      - backend:
          serviceName: dingtalk
          servicePort: 8060
  - host: dingtalk.vkingcloud.com
    http:
      paths:
      - backend:
          serviceName: dingtalk
          servicePort: 8060
